--- a/package.json
+++ b/package.json
@@ -14,17 +14,12 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@eslint/js": "^9.7.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.7.0",
-    "eslint-config-next": "14.2.5",
-    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "typescript-eslint": "^7.17.0"
+    "typescript": "^5"
   }
 }
